refactor Chessboard to use TurnManager