@@ -1,15 +1,12 @@
 package oogasalad.GamePlayer.Board;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
+import java.util.NoSuchElementException;
 import java.util.Queue;
 import java.util.Set;
 import java.util.function.Consumer;
@@ -18,7 +15,6 @@ import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import oogasalad.GamePlayer.Board.EndConditions.EndCondition;
 import oogasalad.GamePlayer.Board.Tiles.ChessTile;
-import oogasalad.GamePlayer.Board.TurnCriteria.Linear;
 import oogasalad.GamePlayer.Board.TurnCriteria.TurnCriteria;
 import oogasalad.GamePlayer.EngineExceptions.EngineException;
 import oogasalad.GamePlayer.EngineExceptions.InvalidMoveException;
@@ -26,9 +22,10 @@ import oogasalad.GamePlayer.EngineExceptions.MoveAfterGameEndException;
 import oogasalad.GamePlayer.EngineExceptions.OutsideOfBoardException;
 import oogasalad.GamePlayer.EngineExceptions.WrongPlayerException;
 import oogasalad.GamePlayer.GamePiece.Piece;
-import oogasalad.GamePlayer.GamePiece.PieceData;
 import oogasalad.GamePlayer.Movement.Coordinate;
-import oogasalad.GamePlayer.Movement.Movement;
+import oogasalad.GamePlayer.Server.ChessHistory;
+import oogasalad.GamePlayer.Server.LocalTurnManager;
+import oogasalad.GamePlayer.Server.TurnManager;
 import oogasalad.GamePlayer.ValidStateChecker.Check;
 import oogasalad.GamePlayer.ValidStateChecker.ValidStateChecker;
 import org.apache.logging.log4j.LogManager;
@@ -38,35 +35,34 @@ import org.apache.logging.log4j.Logger;
 public class ChessBoard implements Iterable<ChessTile> {
 
   private static final Logger LOG = LogManager.getLogger(ChessBoard.class);
-
+  private final GamePlayers players;
+  private final List<ValidStateChecker> validStateCheckers;
+  private final TurnManager turnManager;
   private List<List<ChessTile>> board;
-  private TurnCriteria turnCriteria;
-  private Player[] players;
-  private int[] teamNums;
-  private List<EndCondition> endConditions;
-  private int currentPlayer;
-  private Map<Integer, Double> endResult;
-  private List<History> history;
-  private List<ValidStateChecker> validStateCheckers;
 
   /**
    * Creates a representation of a chessboard if an array of pieces is already provided
    */
   public ChessBoard(List<List<ChessTile>> board, TurnCriteria turnCriteria, Player[] players,
       List<ValidStateChecker> validStateCheckers, List<EndCondition> endConditions) {
+    this.players = new GamePlayers(players);
+    this.turnManager = new LocalTurnManager(new ChessHistory(), this.players, turnCriteria,
+        endConditions);
     this.board = board;
-    this.turnCriteria = turnCriteria;
-    this.players = players;
-    this.teamNums = getTeamNums(players);
     this.validStateCheckers = validStateCheckers;
-    this.endConditions = endConditions;
-    currentPlayer = turnCriteria.getCurrentPlayer();
-    endResult = new HashMap<>();
-    history = new ArrayList<>();
+  }
+
+  public ChessBoard(List<List<ChessTile>> board, TurnManager turnManager, GamePlayers players,
+      List<ValidStateChecker> validStateCheckers) {
+    this.players = players;
+    this.turnManager = turnManager;
+    this.board = board;
+    this.validStateCheckers = validStateCheckers;
   }
 
   /**
-   * Creates a representation of a chessboard with length/height of board given but no valid state checkers given
+   * Creates a representation of a chessboard with length/height of board given but no valid state
+   * checkers given
    */
   public ChessBoard(int length, int height, TurnCriteria turnCriteria, Player[] players,
       List<EndCondition> endConditions) {
@@ -80,20 +76,11 @@ public class ChessBoard implements Iterable<ChessTile> {
       List<ValidStateChecker> validStateCheckers, List<EndCondition> endConditions) {
     this(null, turnCriteria, players, validStateCheckers, endConditions);
     board = new ArrayList<>();
-    IntStream.range(0, height)
-        .forEach(i -> {
-          List<ChessTile> list = new ArrayList<>();
-          IntStream.range(0, length)
-              .forEach(j -> list.add(new ChessTile(new Coordinate(i, j))));
-          board.add(list);
-        });
-  }
-
-  /**
-   * @return team nums associated with each player
-   */
-  private int[] getTeamNums(Player[] players) {
-    return Arrays.stream(players).mapToInt(Player::teamID).toArray();
+    IntStream.range(0, height).forEach(i -> {
+      List<ChessTile> list = new ArrayList<>();
+      IntStream.range(0, length).forEach(j -> list.add(new ChessTile(new Coordinate(i, j))));
+      board.add(list);
+    });
   }
 
   /**
@@ -103,7 +90,7 @@ public class ChessBoard implements Iterable<ChessTile> {
    * @return if the pieces are set
    */
   public boolean setPieces(List<Piece> pieces) {
-    if (history.isEmpty()) {
+    if (turnManager.isHistoryEmpty()) {
       pieces.forEach(p -> {
         Coordinate coordinate = p.getCoordinates();
         try {
@@ -114,8 +101,9 @@ public class ChessBoard implements Iterable<ChessTile> {
       });
       ChessBoard copied = deepCopy();
       LOG.debug("History updated for first time");
-      history.add(new History(copied, new HashSet<>(pieces), pieces.stream().map((p) -> board.get(p.getCoordinates().getRow()).get(p.getCoordinates().getCol())).collect(
-          Collectors.toSet())));
+      turnManager.addToHistory(new History(copied, new HashSet<>(pieces), pieces.stream()
+          .map(p -> board.get(p.getCoordinates().getRow()).get(p.getCoordinates().getCol()))
+          .collect(Collectors.toSet())));
       return true;
     }
     LOG.warn("Attempted board setting after game start");
@@ -125,37 +113,37 @@ public class ChessBoard implements Iterable<ChessTile> {
   /**
    * Moves the piece to the finalSquare
    *
-   * @param piece to move
+   * @param piece       to move
    * @param finalSquare end square
    * @return set of updated tiles + next player turn
    */
   public TurnUpdate move(Piece piece, Coordinate finalSquare) throws EngineException {
     // TODO: valid state checker for person who just moved (redundunt - optional)
     // TODO: check end conditions for other player(s)
-    if (!isGameOver() && piece.checkTeam(turnCriteria.getCurrentPlayer())) {
+    if (!isGameOver() && piece.checkTeam(turnManager.getCurrentPlayer())) {
       TurnUpdate update = new TurnUpdate(piece.move(getTileFromCoords(finalSquare), this),
-          turnCriteria.incrementTurn());
-      history.add(new History(deepCopy(), Set.of(piece), update.updatedSquares()));
-      LOG.debug("History updated: " + history.size());
+          turnManager.incrementTurn());
+      turnManager.addToHistory(new History(deepCopy(), Set.of(piece), update.updatedSquares()));
+      LOG.debug("History updated: " + turnManager.getHistorySize());
       return update;
     }
     LOG.warn(isGameOver() ? "Move made after game over" : "Move made by wrong player");
     throw isGameOver() ? new MoveAfterGameEndException("") : new WrongPlayerException(
-        "Expected: " + turnCriteria.getCurrentPlayer() + "\n Actual: " + piece.getTeam());
+        "Expected: " + turnManager.getCurrentPlayer() + "\n Actual: " + piece.getTeam());
   }
 
   /**
    * Copies this board and then makes the move
    *
-   * @param piece to move
+   * @param piece       to move
    * @param finalSquare to move the piece to
    * @return copy of the chessboard after the hypothetical move is made
    */
   public ChessBoard makeHypotheticalMove(Piece piece, Coordinate finalSquare)
       throws EngineException {
     ChessBoard boardCopy = deepCopy();
-    Piece copiedPiece = boardCopy.getTile(piece.getCoordinates()).getPiece().orElseThrow(
-        () -> new InvalidMoveException("Hypothetical move could not be made"));
+    Piece copiedPiece = boardCopy.getTile(piece.getCoordinates()).getPiece()
+        .orElseThrow(() -> new InvalidMoveException("Hypothetical move could not be made"));
     copiedPiece.move(boardCopy.getTile(finalSquare), boardCopy);
 
     return boardCopy;
@@ -168,12 +156,9 @@ public class ChessBoard implements Iterable<ChessTile> {
    * @return all the Target Pieces this team has
    */
   public List<Piece> targetPiece(int team) {
-    return board.stream()
+    return board.stream().flatMap(List::stream).toList().stream().map(ChessTile::getPieces)
         .flatMap(List::stream).toList().stream()
-        .map(ChessTile::getPieces)
-        .flatMap(List::stream).toList().stream()
-        .filter(piece -> piece.checkTeam(team) && piece.isTargetPiece())
-        .collect(Collectors.toList());
+        .filter(piece -> piece.checkTeam(team) && piece.isTargetPiece()).toList();
   }
 
   /**
@@ -181,19 +166,11 @@ public class ChessBoard implements Iterable<ChessTile> {
    */
   public ChessBoard deepCopy() {
     List<List<ChessTile>> boardCopy = new ArrayList<>();
-    IntStream.range(0, this.board.size()).forEach((i) -> {
+    IntStream.range(0, this.board.size()).forEach(i -> {
       boardCopy.add(new ArrayList<>());
       boardCopy.get(i).addAll(this.board.get(i).stream().map(ChessTile::clone).toList());
     });
-    return new ChessBoard(boardCopy, this.turnCriteria, this.players, this.validStateCheckers,
-        this.endConditions);
-  }
-
-  /**
-   * @return list of board history
-   */
-  public List<History> getHistory() {
-    return history;
+    return new ChessBoard(boardCopy, this.turnManager, this.players, this.validStateCheckers);
   }
 
   /**
@@ -210,43 +187,39 @@ public class ChessBoard implements Iterable<ChessTile> {
    * @param piece to get moves from
    * @return set of tiles the piece can move to
    */
-  public Set<ChessTile> getMoves(Piece piece) throws EngineException, OutsideOfBoardException{
+  public Set<ChessTile> getMoves(Piece piece) throws EngineException {
     // TODO: add valid state checker here
     ValidStateChecker check = new Check();
     Set<ChessTile> allPieceMovements = piece.getMoves(this);
     allPieceMovements.removeIf(entry -> {
       ChessBoard copy;
       try {
-        copy = makeHypotheticalMove(this.getTile(piece.getCoordinates()).getPiece().get(), entry.getCoordinates());
-        if(!check.isValid(copy, piece.getTeam())){
+        // TODO: warning optional.get() without checking isPresent()
+        copy = makeHypotheticalMove(this.getTile(piece.getCoordinates()).getPiece().get(),
+            entry.getCoordinates());
+        if (!check.isValid(copy, piece.getTeam())) {
           return true;
         }
       } catch (EngineException e) {
         return false;
       }
-      return false;});
-    return piece.checkTeam(turnCriteria.getCurrentPlayer()) ? allPieceMovements : Set.of();
+      return false;
+    });
+    return piece.checkTeam(turnManager.getCurrentPlayer()) ? allPieceMovements : Set.of();
   }
 
   /**
    * @return if the game is over
    */
   public boolean isGameOver() {
-    for (EndCondition ec : endConditions) {
-      Map<Integer, Double> endResultRet = ec.getScores(this);
-      if (!endResultRet.isEmpty()) {
-        endResult = endResultRet;
-        return true;
-      }
-    }
-    return false;
+    return turnManager.isGameOver(this);
   }
 
   /**
    * @return scores of all teams after game over. If game isn't over, an empty optional is returned.
    */
   public Map<Integer, Double> getScores() {
-    return endResult;
+    return turnManager.getScores();
   }
 
   /**
@@ -255,8 +228,8 @@ public class ChessBoard implements Iterable<ChessTile> {
    */
   public boolean inBounds(Coordinate coordinates) {
     return coordinates.getRow() >= 0 && coordinates.getCol() >= 0
-        && coordinates.getRow() < board.size()
-        && coordinates.getCol() < board.get(coordinates.getRow()).size();
+        && coordinates.getRow() < board.size() && coordinates.getCol() < board.get(
+        coordinates.getRow()).size();
   }
 
   /**
@@ -288,18 +261,31 @@ public class ChessBoard implements Iterable<ChessTile> {
   }
 
   /**
+   * Gets the player object with the associated ID
+   *
    * @param id of player
    * @return player with given id
    */
   public Player getPlayer(int id) {
-    return players[Math.min(id, players.length - 1)];
+    return players.getPlayer(id);
   }
 
   /**
+   * Get array containing all the players
+   *
    * @return players list
    */
   public Player[] getPlayers() {
-    return players;
+    return players.getPlayers();
+  }
+
+  /**
+   * Gets all team numbers
+   *
+   * @return team numbers for all players
+   */
+  public int[] getTeams() {
+    return players.getTeams();
   }
 
   /**
@@ -342,24 +328,16 @@ public class ChessBoard implements Iterable<ChessTile> {
   }
 
   /**
-   * @return team numbers for all players
-   */
-  public int[] getTeams() {
-    return teamNums;
-  }
-
-  /**
    * Gets all the pieces on the board
    */
   public List<Piece> getPieces() {
-    return board.stream()
-        .flatMap(List::stream).toList().stream()
-        .map(ChessTile::getPieces)
+    return board.stream().flatMap(List::stream).toList().stream().map(ChessTile::getPieces)
         .flatMap(List::stream).toList();
   }
 
   /**
    * Creates foreach loop over board
+   *
    * @param action to do in loop
    */
   @Override
@@ -370,7 +348,7 @@ public class ChessBoard implements Iterable<ChessTile> {
   /**
    * Iterator class over the board list
    */
-  private class ChessBoardIterator implements Iterator<ChessTile> {
+  private static class ChessBoardIterator implements Iterator<ChessTile> {
 
     private final Queue<ChessTile> queue;
 
@@ -394,7 +372,7 @@ public class ChessBoard implements Iterable<ChessTile> {
      * @return next ChessTile
      */
     @Override
-    public ChessTile next() {
+    public ChessTile next() throws NoSuchElementException {
       return queue.poll();
     }
   }
